# mozi-ai-x

./: .gitignore  README.md  pyproject.toml
examples/: distributed_client_blue.py  distributed_client_red.py  distributed_master.py  standalone_example.py
scripts/analysis/: README.md  analyze_class_attributes.py  analyze_var_maps.py  fields_by_class.json
scripts/proto/: gen_proto.py
scripts/proto/src/: GRPCServerBase.proto
scripts/tools/: batch_refactor.py
src/mozi_ai_x/database/: database.py
src/mozi_ai_x/simulation/: args.py  contact.py  doctrine.py  mount.py  scenario.py  sensor.py  side.py  situ_interpret.py  situation.py  types.py  weather.py
src/mozi_ai_x/simulation/active_unit/: aircraft.py  base.py  facility.py  group.py  ship.py  submarine.py  weapon.py
src/mozi_ai_x/simulation/magazine/: __init__.py
src/mozi_ai_x/simulation/mission/: __init__.py  base.py  patrol.py  strike.py
src/mozi_ai_x/simulation/proto/grpc/: __init__.py
src/mozi_ai_x/simulation/server/: distributed.py  response.py  server.py
src/mozi_ai_x/utils/: geo.py  grid.py  log.py  lua_script.py
tests/: quick_start.py  test_validator.py
